fix: allow all origin patterns in CorsConfig so any Vercel domain connects without CORS issues